# standard-model-of-code

./: .gitignore  .pre-commit-config.yaml  AGENTKNOWLEDGEDUMP.md  ARCHITECTURE_MAP.md  AUDIT_2026-02-24.md  AUDIT_REQUEST.md  AUDIT_REQUEST_V2.md  AUDIT_REQUEST_V3_FULL.md  AUDIT_REQUEST_V4.md  AUTOMATED_TASK_GENERATION.md  BEST_PRACTICES.md  CLAUDE.md  CLAUDE_SUBMISSION.md  CLEANUP_PLAN.md  CODEBASE_INSIGHTS_REPORT.md  CODEX_SUBMISSION.md  COMPREHENSIVE_THEORY.md  CONFIDENCE_ACHIEVED.md  CONSOLIDATION_MATRIX.md  DASHBOARD.md  DECISIONS.md  DEEP_GHOSTS_REPORT.md  DEFINITION_OF_DONE.md  DIMENSIONS.md  DOMAINS.yaml  Dockerfile  EXECUTION_PLAN.md  FIRST_PRINCIPLES.md  GEMINI.md  GENERATED_TASKS.md  GITHUB_ANALYSIS_PLAN.md  HANDOFF.md  Makefile  PHASE_1_USAGE.md  PIPELINES.md  PROOF_OF_STABILITY.md  QUALITY_GATES.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_GUIDE.md  (+39 more)
particle/: .editorconfig  .gitignore  .import-linter.ini  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  cli.py  collider  collider-hub  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_go_mutate.py  test_mutate.py  tox.ini
particle/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
particle/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
particle/.github/workflows/: ci.yml
particle/artifacts/: .gitignore
particle/data/: 1440_summary.json  LAW_11_CANONICAL.json  OUTPUT_SCHEMA.json  pattern_registry.json  system_status.json
particle/docs/: COLLIDER.md  GLOSSARY.yaml  KNOWLEDGE_TREE.md  MODEL.md  OPEN_CONCERNS.md  ORPHANED_CONTROLS_INDEX.md  POSSIBILITIES.md  PURPOSE_INTELLIGENCE.md  RESEARCH_DIRECTIONS.md  RESEARCH_TO_IMPLEMENTATION_ROADMAP.md  SESSION_CONCERNS_20260125.md  SPRAWL_CONSOLIDATION_PLAN.md  THEORY_EXPANSION_2026.md  collider_map.html  validated_pipeline.md
particle/ops/: Dockerfile  cloud-run-deploy.sh
particle/proofs/: ContextomeNecessity.lean  README.md  lakefile.lean
particle/schema/: README.md  antimatter_patterns.yaml  constants.yaml  graph.schema.json  particle.schema.json  relations.jsonld  relations.yaml  types.py  types.ts
particle/scripts/: analyze_latest_activity.py  collider_hub.py  collider_scorecard.py  extract_sections.py  file_popularity_tracker.py  gen-dev-payload.py  generate_repo_timestamps.py  measure_subdivision_stability.py  output_parity.py  theory_coverage.py  verify_polyglot.py  version_compare.py
particle/tests/: conftest.py  test_analysis_depth.py  test_api_drift.py  test_api_drift_denoising.py  test_arch_diff.py  test_boundary_validator.py  test_cci.py  test_chemistry_diagnostics.py  test_chemistry_modulation.py  test_classifier_plugin.py  test_collider_hub_feedback.py  test_collider_pipeline_integration.py  test_color_encoding.py  test_color_science.py  test_compartment_bridge.py  test_compartment_inferrer.py  test_constraint_engine.py  test_contextome_intel.py  test_contract_output.py  test_control_flow_analyzer.py  test_data_chemistry.py  test_data_flow_analyzer.py  test_data_ledger.py  test_database.py  test_dimension_classifier.py  test_edge_extractor.py  test_findings_counts.py  test_full_analysis.py  test_gap_detector.py  test_gemini_contextome.py  test_git_context.py  test_graph_analyzer.py  test_graph_type_inference.py  test_group_cohesion.py  test_hub_integration.py  test_ideome_synthesis.py  test_import_resolution.py  test_incoherence.py  test_insights_compiler.py  test_insights_engine.py  (+27 more)
particle/tools/: README.md  check-arch-docs.sh  measure_tokens.py  mine_eslint.py  mine_semgrep.py  pipeline_tracer.py  validate_control_registry.py  validate_ui.py  verify_animation.py  visualize_graph_webgl.py
(+4981 files in other folders)
