[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collider"
version = "4.0.0"
description = "Standard Model of Code Analysis & Visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Leonardo Lech", email = "leonardo.lech@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "libcst>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
graphrag = [
    "lancedb>=0.6.13",
    "litellm>=1.80.0",
    "sentence-transformers>=3.2.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/lech-lbl/PROJECT_elements"
Repository = "https://github.com/lech-lbl/PROJECT_elements"

[project.scripts]
collider = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/core"]
omit = ["*/parser/*", "*/viz/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
